--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -63,7 +63,7 @@
 
 #info > h1 {
   font-family: var(--title-font);
-  font-size: 4.4rem;
+  font-size: 4.2rem;
   opacity: 0;
   animation: infoAppearance 0.5s 1s ease-in-out forwards;
   background: var(--gradient-text-green);
@@ -225,6 +225,9 @@
     margin-left: 0px;
     width: 80%;
   }
+  #info > h1 {
+    font-size: 3.5rem;
+  }
 
   #profileIMG {
     width: 35vw;
@@ -268,8 +271,27 @@
 }
 
 @media (max-width: 450px) {
+  #languageSwitcherDiv {
+    top: 5px;
+    display: flex;
+    align-items: center;
+  }
+  .worldImg {
+    width: 5%;
+    height: 5%;
+  }
+  #languageSwitcherDiv > button {
+    font-size: 10px;
+    padding: 5px;
+  }
+  #info {
+    margin-top: 150px;
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+  }
   #info > h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   #info > h1::after {
     width: 100px;
@@ -279,9 +301,19 @@
   }
   #info > p {
     width: 100%;
+    font-size: 15px;
   }
   #buttonContact {
-    width: 300%;
+    width: 100%;
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  #buttonContact button {
+    width: 50%;
+    height: 30px;
+    border: solid 1px;
+    font-size: 10px;
   }
   #decoDiv {
     width: 4900px;
